--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -24,8 +24,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            tools:listitem="@layout/item_basket"
-            tools:visibility="visible" />
+            tools:listitem="@layout/item_basket" />
 
         <LinearLayout
             android:id="@+id/no_products_in_basket_layout"
@@ -37,7 +36,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
@@ -65,8 +65,9 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/return_home"
+                style="@style/LoginTheme"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/auth_button_height"
                 android:layout_marginStart="@dimen/padding_margin_medium"
                 android:layout_marginTop="@dimen/padding_margin_medium"
                 android:layout_marginEnd="@dimen/padding_margin_medium"
@@ -88,8 +89,7 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:visibility="visible">
+            app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/total_amount_layout"
@@ -137,19 +137,30 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/make_order_btn"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/padding_margin_xlarge"
-                        android:text="@string/make_order"
-                        android:textAllCaps="true"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/text_medium"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="@dimen/padding_margin_small"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/total_amount" />
+                        app:layout_constraintTop_toBottomOf="@+id/total_amount">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/make_order_btn"
+                            style="@style/LoginTheme"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/auth_button_height"
+                            android:layout_margin="@dimen/padding_margin_small"
+                            android:text="@string/make_order"
+                            android:textAllCaps="true"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_medium"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
