--- a/app/src/main/res/layout/fragment_favorite_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_list.xml
@@ -36,7 +36,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
@@ -64,8 +65,9 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/return_home"
+                style="@style/LoginTheme"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/auth_button_height"
                 android:layout_marginStart="@dimen/padding_margin_medium"
                 android:layout_marginTop="@dimen/padding_margin_medium"
                 android:layout_marginEnd="@dimen/padding_margin_medium"
