--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -12,6 +12,18 @@
         android:layout_height="match_parent"
         tools:context=".fragments.order.OrderFragment">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_orders_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_order"
+            tools:visibility="visible" />
+
         <LinearLayout
             android:id="@+id/no_products_in_order_layout"
             android:layout_width="wrap_content"
@@ -19,7 +31,7 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +63,9 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/return_home"
+                style="@style/LoginTheme"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/auth_button_height"
                 android:layout_marginStart="@dimen/padding_margin_medium"
                 android:layout_marginTop="@dimen/padding_margin_medium"
                 android:layout_marginEnd="@dimen/padding_margin_medium"
