--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Deliveryteka" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:editTextColor">@color/black</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/teal_200</item>
@@ -14,16 +15,18 @@
         <item name="colorOnBackground">@color/white</item>
         <item name="android:statusBarColor">@color/color_error</item>
         <item name="textAppearanceButton">@style/AppTextAppearance.Button</item>
-        <item name="materialButtonStyle">@style/AppButton</item>
-        <item name="textInputStyle">@style/LoginTextField</item>
         <item name="android:scrollViewStyle">@style/AppScrollView</item>
-        <item name="android:textViewStyle">@style/TextNormal</item>
         <item name="snackbarStyle">@style/AppSnackbar</item>
         <item name="snackbarTextViewStyle">@style/AppSnackbarTextView</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
         <item name="materialAlertDialogTheme">@style/Theme.MaterialComponents.Light.Dialog.Alert
         </item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:alertDialogTheme">@style/AlertDialogTheme</item>
+        <item name="android:textViewStyle">@style/LoginTextView</item>
+        <item name="textInputStyle">@style/LoginTextField</item>
+        <item name="materialButtonStyle">@style/LoginButton</item>
+
     </style>
 
     <style name="AppTextAppearance.Button" parent="TextAppearance.MaterialComponents.Button">
@@ -43,11 +46,11 @@
     </style>
 
     <style name="AppButton" parent="Widget.MaterialComponents.Button">
-        <item name="backgroundTint">?attr/colorPrimary</item>
         <item name="android:textColor">@color/button_text_color</item>
         <item name="iconTint">@color/button_text_color</item>
         <item name="rippleColor">@color/button_light_ripple_color</item>
         <item name="cornerRadius">12dp</item>
+
     </style>
 
     <style name="AppCard" parent="Widget.MaterialComponents.CardView">
@@ -105,6 +108,7 @@
         <item name="android:layout_height">48dp</item>
         <item name="iconSize">24dp</item>
         <item name="iconPadding">0dp</item>
+        <item name="strokeWidth">0dp</item>
         <item name="android:outlineProvider">none</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetTop">0dp</item>
@@ -120,6 +124,7 @@
         <item name="android:backgroundTint">@color/button_light_ripple_color</item>
         <item name="cornerRadius">0dp</item>
         <item name="textAllCaps">true</item>
+
     </style>
 
 
@@ -128,6 +133,9 @@
         <item name="android:textSize">@dimen/text_medium</item>
         <item name="rippleColor">@color/login_button_ripple_color</item>>
         <item name="android:letterSpacing">.01</item>
+        <item name="strokeWidth">0.8dp</item>
+        <item name="strokeColor">@color/light_gray</item>
+        <item name="elevation">@dimen/padding_margin_xlarge</item>
     </style>
 
     <style name="AppSnackbar" parent="Widget.MaterialComponents.Snackbar.FullWidth" />
@@ -168,4 +176,22 @@
         <item name="spinBars">true</item>
         <item name="color">@android:color/black</item>
     </style>
+
+    <style name="AlertDialogTheme" parent="MaterialAlertDialog.MaterialComponents">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/color_error</item>
+        <item name="android:windowBackground">@drawable/rounded_dialog</item>
+        <item name="android:buttonBarPositiveButtonStyle">@style/OutlinedButton</item>
+        <item name="android:buttonBarNegativeButtonStyle">@style/OutlinedButton</item>
+    </style>
+
+    <style name="OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="strokeColor">@color/white</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
+
 </resources>
